libs/preprocessor/tests/errors/pe20_pragma_invalid_scope/source.hpp
#pragma hemtt suppress something lin
